# myelin

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml  release-please-config.json
.devcontainer/: devcontainer.json
.github/: apply-rulesets.sh  copilot-instructions.md  main-protection.json  release-protection.json
.github/workflows/: benchmark.yml  ci.yml  publish.yml  regression.yml  release-please.yml  sync-rulesets.yml
benchmarks/: profile_recall.py
benchmarks/locomo/: download_data.sh  run.py  score.py
benchmarks/longmemeval/: cache.py  download_data.sh  experiment.py  run.py  score.py
benchmarks/regression/: run.py
benchmarks/regression/baseline/: lme_scores.json  locomo_scores.json
benchmarks/regression/baseline/full/: lme_scores.json  locomo_scores.json
docs/: TODO.md  architecture.md
myelin/: __init__.py  __main__.py  background.py  cli.py  config.py  graph.html  ingest.py  lock.py  log.py  mcp.py  models.py  reranker.py  server.py  timer.py  worker.py
myelin/integrations/: __init__.py  base.py  github.py  obsidian.py  sync.py
myelin/recall/: __init__.py  activation.py  decay.py  query_planner.py  reranker.py  time_cells.py
myelin/store/: __init__.py  amygdala.py  chunking.py  consolidation.py  entorhinal.py  hippocampus.py  neocortex.py  perirhinal.py  prefrontal.py  thalamus.py
myelin/ui/: __init__.py  graph.html  serve.py
scripts/: seed_dev.py
tests/: conftest.py  test_background.py  test_cli.py  test_cli_stats.py  test_config.py  test_debug_recall.py  test_graph.py  test_ingest.py  test_lock.py  test_logging.py  test_mcp.py  test_mcp_integration.py  test_neocortex_reranker.py  test_server.py  test_stats_command.py  test_storage_cap.py  test_worker.py
tests/benchmarks/: test_latency.py  test_score.py
tests/integrations/: test_github.py  test_ingest.py  test_obsidian.py  test_sync.py
tests/recall/: test_activation.py  test_debug_recall.py  test_decay.py  test_query_planner.py  test_reranker.py  test_time_cells.py
tests/store/: test_amygdala.py  test_chunking.py  test_concurrency.py  test_consolidation.py  test_entorhinal.py  test_hippocampus.py  test_neocortex.py  test_perirhinal.py  test_prefrontal.py  test_retrieval_precision.py  test_storage_cap.py  test_thalamus.py
tests/ui/: test_graph.py
